# dbus_project

./: .clang_format  .gitignore  README.md  build.sh  conanfile.txt  dbus_client.cpp  dbus_project.cpp  format.sh  meson.build  permissions.db  setup.sh  test.db
src/client/: main.cpp
src/permissions_server/: adaptor.cpp  adaptor.h  main.cpp  service.cpp  service.h
src/time_server/: adaptor.cpp  adaptor.h  main.cpp  proxy.cpp  proxy.h  service.cpp  service.h
